<resources>
    <string name="app_name" translatable="false">WeatherAppPoject</string>
    <string name="today">Today</string>
    <string name="city">Alexandria</string>
    <string name="dayformat">Tue Mar 11</string>
    <string name="weatherstatus">Partly Cloudy</string>
    <string name="weathertemp">25</string>
    <string name="cloudpercent">5%</string>
    <string name="clouds">Cloud</string>
    <string name="next5days">Next 5 days</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="winds">Wind speed</string>
    <string name="networkstatus">Internet Is Disconnected</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="gps">GPS</string>
    <string name="map">Map</string>
    <string name="search_map">Search…</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="startDate">Start From</string>
    <string name="cancel">Cancel</string>
    <string name="selectLocation">Select Location</string>
    <string name="notification">Notification</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="endDate">End in</string>
    <string name="addAlertFrom">Add alert from </string>
    <string name="completeDetails">Compelete alert setup</string>
    <string name="currentLocation">Current location</string>
    <string name="units">Units</string>
    <string name="metricUnits">Metric</string>
    <string name="impUnits">Imparial</string>
    <string name="saveAlertData">Save</string>
    <string name="toDate">To</string>
    <string name="fromDate">From</string>
    <string name="tempUnits">Temperature</string>
    <string name="kalvin">Kelvin</string>
    <string name="c">Celsius</string>
    <string name="fahrenhiet">Fahrenheit</string>
    <string name="appname">Weather Alerts</string>
    <string name="delete">Delete</string>
    <string name="location">Location</string>
    <string name="dismiss">Dismiss</string>
    <string name="alertnotification">Alert Notification</string>
    <string name="alertalarm">Alert alarm</string>
    <string name="favoritemenu">Favorite</string>
    <string name="home">Home</string>
    <string name="notifications">Notification</string>
    <string name="deletAlertConfirm">Are you sure you want to remove this alert?</string>
    <string name="removeDialogmsg">Delete Confirmation</string>
    <string name="ok">Ok</string>
    <string name="no">Cancel</string>
    <string name="addtofavorite">Add to Favorite</string>
    <string name="addtoALert">Add to Alert</string>
    <string name="makecurrent">Make current location</string>
    <string name="notfoundlocation">Location not found</string>
    <string name="turnonlocation">Turn On location</string>
    <string name="nointernetconnection">There is no internet connection</string>
    <string name="alertdatainput">Please enter correct data</string>
    <string name="nowarnings">There are no warnings</string>
    <string name="nowforecast">Current State:</string>









</resources>