<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:elevation="12dp"
    app:cardCornerRadius="100dp">


    <TextView
        android:id="@+id/tv_from"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/from"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.4" />

    <TextView
        android:id="@+id/tv_to"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/to"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_start_date"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/startDate"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/buttons"
        android:textColorHint="@color/buttons"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_from" />

    <TextView
        android:id="@+id/tv_end_date"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:hint="@string/endDate"
        android:inputType="textMultiLine"
        android:padding="8dp"
        android:textAlignment="center"
        android:textColor="@color/buttons"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/tv_start_date" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/selectLocation"
        android:textColorHint="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_start_date" />

    <RadioGroup
        android:id="@+id/rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@+id/tv_location"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/imgMapAlert">

        <RadioButton
            android:id="@+id/rbNotification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:buttonTint="@color/black"
            android:checked="false"
            android:text="@string/notification" />

        <RadioButton
            android:id="@+id/rbAlarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:buttonTint="@color/dark_blue"
            android:checked="false"
            android:text="@string/alarm" />

    </RadioGroup>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/imgMapAlert"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tv_location"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        tools:srcCompat="@tools:sample/avatars" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rg">



        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewCancelNewAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cardViewSaveNewAlert"
            app:layout_constraintTop_toBottomOf="@+id/rg">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnCancelAlert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/buttons"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewSaveNewAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cardViewCancelNewAlert"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSaveAlert"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/buttons"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>